--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
